--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -2,7 +2,7 @@
 
   <h2 class="title">Checkout</h2>
 
-  <!-- EMPTY CART -->
+  <!-- empty cart-->
   <div class="empty-cart-wrapper" *ngIf="cart.length === 0 && !showSuccess">
     <div class="empty-cart-card">
       <div class="empty-icon">🛒</div>
@@ -15,10 +15,10 @@
     </div>
   </div>
 
-  <!-- CHECKOUT CONTENT -->
+  <!-- checkout -->
   <div class="checkout-grid" *ngIf="cart.length > 0 && !showSuccess">
 
-    <!-- CART ITEMS -->
+    <!-- cart items -->
     <div class="card">
       <h3>Cart Items</h3>
 
@@ -50,7 +50,7 @@
       </div>
     </div>
 
-    <!-- ORDER SUMMARY -->
+    <!-- order summary -->
     <div class="card">
       <h3>Order Summary</h3>
 
@@ -67,7 +67,7 @@
       </div>
     </div>
 
-    <!-- DELIVERY DETAILS -->
+    <!-- delivery details -->
     <div class="card full-width">
       <h3>Delivery Details</h3>
 
@@ -89,7 +89,7 @@
       </div>
     </div>
 
-    <!-- PAYMENT -->
+    <!-- payment -->
     <div class="card full-width">
       <h3>Payment Method</h3>
 
@@ -117,7 +117,7 @@
     </button>
   </div>
 
- <!-- SUCCESS -->
+ <!-- succuss layout -->
 <div class="success-overlay" *ngIf="showSuccess">
   <div
     class="success-box"
