--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,14 +15,14 @@
   </button>
 </header>
 
-<!-- ================= CART OVERLAY ================= -->
+<!-- cart overlay-->
 <div
   class="cart-overlay"
   *ngIf="isCartOpen"
   (click)="isCartOpen = false">
 </div>
 
-<!-- ================= CART PANEL ================= -->
+<!-- cart panal -->
 <div
   class="cart-panel"
   *ngIf="isCartOpen"
@@ -30,12 +30,12 @@
 
   <h3>Your Cart</h3>
 
-  <!-- EMPTY -->
+  <!-- empty -->
   <div class="cart-empty" *ngIf="cart.length === 0">
     <p>🛒 Your cart is empty</p>
   </div>
 
-  <!-- ITEMS -->
+  <!-- items -->
   <div class="cart-item" *ngFor="let item of cart">
     <div class="cart-info">
       <strong>{{ item.name }}</strong>
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <!-- FOOTER -->
+  <!-- footer -->
   <div *ngIf="cart.length > 0" class="cart-footer">
     <div class="cart-total">
       <span>Total</span>
